# agent-bridge

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: CONTRIBUTING.md
examples/: examples.py
src/agent_bridge/: __init__.py  cli.py  converter.py  hermes.py  openclaw.py  tool.py
tests/: test_agent_bridge.py
